<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/terminal_action_keyboard"
        android:icon="@drawable/ic_terminal_keyboard"
        android:title="@string/terminal_menu_keyboard"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/terminal_action_copy_all"
        android:title="@string/terminal_menu_copy_all" />
    <item
        android:id="@+id/terminal_action_paste"
        android:title="@string/terminal_menu_paste" />
    <item
        android:id="@+id/terminal_action_font_larger"
        android:title="@string/terminal_menu_font_larger" />
    <item
        android:id="@+id/terminal_action_font_smaller"
        android:title="@string/terminal_menu_font_smaller" />
    <item
        android:id="@+id/terminal_action_close"
        android:title="@string/terminal_menu_close" />
</menu>
